create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1980,8 +1980,8 @@ a {
   }
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -2596,8 +2596,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -3138,15 +3138,15 @@ a {
     display: none !important;
   }
 }
-.cid-udYTCesGyt {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1920x1306.png");
+.cid-udZsIePbRI {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-5-1920x1280.jpg");
 }
-.cid-udYTCesGyt .mbr-fallback-image.disabled {
+.cid-udZsIePbRI .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-udYTCesGyt .mbr-fallback-image {
+.cid-udZsIePbRI .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -3155,33 +3155,8 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-udYTCesGyt .card-wrapper {
-  background: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-udYTCesGyt .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYTCesGyt .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYTCesGyt .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYTCesGyt .mbr-text,
-.cid-udYTCesGyt .mbr-section-btn {
-  color: #000000;
-  text-align: center;
-}
-.cid-udYTCesGyt .card-title,
-.cid-udYTCesGyt .card-box {
-  text-align: center;
-  color: #000000;
+.cid-udZsIePbRI .mbr-section-title {
+  color: #ffffff;
 }
 .cid-ubGzdwKSAD {
   padding-top: 4rem;
@@ -3384,8 +3359,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -4053,8 +4028,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -4117,51 +4092,6 @@ a {
 }
 .cid-ucBXWmiGdQ .mbr-section-title {
   color: #ffffff;
-}
-.cid-udYSRIl4mv {
-  padding-top: 6rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/420847241-1112658663081142-8329793398442430326-n-3-2048x1153.jpeg");
-}
-.cid-udYSRIl4mv .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-udYSRIl4mv .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-udYSRIl4mv .card-wrapper {
-  background: #fffac5;
-}
-@media (max-width: 767px) {
-  .cid-udYSRIl4mv .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYSRIl4mv .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYSRIl4mv .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYSRIl4mv .mbr-text,
-.cid-udYSRIl4mv .mbr-section-btn {
-  color: #000000;
-  text-align: center;
-}
-.cid-udYSRIl4mv .card-title,
-.cid-udYSRIl4mv .card-box {
-  text-align: center;
-  color: #000000;
 }
 .cid-ucU9V9E2L9 {
   z-index: 1000;
@@ -4515,10 +4445,30 @@ a {
     left: -1rem;
   }
 }
+.cid-udZrCzvlhq {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-1920x639.jpg");
+}
+.cid-udZrCzvlhq .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-udZrCzvlhq .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-udZrCzvlhq .mbr-section-title {
+  color: #ffffff;
+}
 .cid-uaUSZoM28m {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-color: #fcffc0;
+  background-color: #ffffff;
 }
 .cid-uaUSZoM28m .item-subtitle {
   line-height: 1.2;
@@ -4708,8 +4658,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -5309,8 +5259,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -5373,51 +5323,6 @@ a {
 }
 .cid-ucBXWmiGdQ .mbr-section-title {
   color: #ffffff;
-}
-.cid-udYRwWAEtg {
-  padding-top: 5rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1920x1920.jpg");
-}
-.cid-udYRwWAEtg .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-udYRwWAEtg .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-udYRwWAEtg .card-wrapper {
-  background: #f7f7f7;
-}
-@media (max-width: 767px) {
-  .cid-udYRwWAEtg .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYRwWAEtg .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYRwWAEtg .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYRwWAEtg .mbr-text,
-.cid-udYRwWAEtg .mbr-section-btn {
-  color: #000000;
-  text-align: center;
-}
-.cid-udYRwWAEtg .card-title,
-.cid-udYRwWAEtg .card-box {
-  text-align: center;
-  color: #000000;
 }
 .cid-ucU9V9E2L9 {
   z-index: 1000;
@@ -5770,6 +5675,26 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-ue255uP7zR {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-1920x1920.jpg");
+}
+.cid-ue255uP7zR .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ue255uP7zR .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-ue255uP7zR .mbr-section-title {
+  color: #ffffff;
 }
 .cid-ubiPMA5WKU {
   padding-top: 4rem;
@@ -5980,8 +5905,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -6044,51 +5969,6 @@ a {
 }
 .cid-ucBXWmiGdQ .mbr-section-title {
   color: #ffffff;
-}
-.cid-udYPodxcql {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1920x1043.png");
-}
-.cid-udYPodxcql .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-udYPodxcql .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-udYPodxcql .card-wrapper {
-  background: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-udYPodxcql .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYPodxcql .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYPodxcql .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYPodxcql .mbr-text,
-.cid-udYPodxcql .mbr-section-btn {
-  color: #000000;
-  text-align: center;
-}
-.cid-udYPodxcql .card-title,
-.cid-udYPodxcql .card-box {
-  text-align: center;
-  color: #000000;
 }
 .cid-ucU9V9E2L9 {
   z-index: 1000;
@@ -6441,6 +6321,26 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-ue25Ti8Ao7 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-1920x1043.png");
+}
+.cid-ue25Ti8Ao7 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ue25Ti8Ao7 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-ue25Ti8Ao7 .mbr-section-title {
+  color: #000000;
 }
 .cid-ub1KtLuBac {
   padding-top: 5rem;
@@ -6621,8 +6521,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -6685,51 +6585,6 @@ a {
 }
 .cid-ucBXWmiGdQ .mbr-section-title {
   color: #ffffff;
-}
-.cid-udYM7VSzIp {
-  padding-top: 5rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/gambar-whatsapp-2024-04-22-pukul-06.35.40-54c6fab1-1040x780.jpg");
-}
-.cid-udYM7VSzIp .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-udYM7VSzIp .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-udYM7VSzIp .card-wrapper {
-  background: #f7f7f7;
-}
-@media (max-width: 767px) {
-  .cid-udYM7VSzIp .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYM7VSzIp .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYM7VSzIp .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYM7VSzIp .mbr-text,
-.cid-udYM7VSzIp .mbr-section-btn {
-  color: #000000;
-  text-align: center;
-}
-.cid-udYM7VSzIp .card-title,
-.cid-udYM7VSzIp .card-box {
-  text-align: center;
-  color: #000000;
 }
 .cid-ucU9V9E2L9 {
   z-index: 1000;
@@ -7082,6 +6937,26 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-udZucoLaN4 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-8-1920x1920.png");
+}
+.cid-udZucoLaN4 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-udZucoLaN4 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-udZucoLaN4 .mbr-section-title {
+  color: #000000;
 }
 .cid-ucUdAte6iF {
   padding-top: 0rem;
@@ -7275,8 +7150,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -7339,51 +7214,6 @@ a {
 }
 .cid-ucBXWmiGdQ .mbr-section-title {
   color: #ffffff;
-}
-.cid-udYOlOafWj {
-  padding-top: 5rem;
-  padding-bottom: 4rem;
-  background-image: url("../../../assets/images/mbr-1920x673.png");
-}
-.cid-udYOlOafWj .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-udYOlOafWj .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-udYOlOafWj .card-wrapper {
-  background: #a981a4;
-}
-@media (max-width: 767px) {
-  .cid-udYOlOafWj .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYOlOafWj .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYOlOafWj .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYOlOafWj .mbr-text,
-.cid-udYOlOafWj .mbr-section-btn {
-  color: #000000;
-  text-align: center;
-}
-.cid-udYOlOafWj .card-title,
-.cid-udYOlOafWj .card-box {
-  text-align: center;
-  color: #000000;
 }
 .cid-ucU9V9E2L9 {
   z-index: 1000;
@@ -7737,6 +7567,26 @@ a {
     left: -1rem;
   }
 }
+.cid-udZvYb5QYC {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-1920x551.png");
+}
+.cid-udZvYb5QYC .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-udZvYb5QYC .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-udZvYb5QYC .mbr-section-title {
+  color: #000000;
+}
 .cid-ubBhnWddlS {
   padding-top: 3rem;
   padding-bottom: 2rem;
@@ -7923,8 +7773,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #2e481a;
 }
 @media (max-width: 991px) {
@@ -8465,15 +8315,15 @@ a {
     display: none !important;
   }
 }
-.cid-udYLkqX3bI {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-  background-image: url("../../../assets/images/img-20240423-wa0052-01.jpeg-11-1280x576.jpeg");
+.cid-ue277QQTHs {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/img-20240423-wa0052-01.jpeg-22-1280x576.jpeg");
 }
-.cid-udYLkqX3bI .mbr-fallback-image.disabled {
+.cid-ue277QQTHs .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-udYLkqX3bI .mbr-fallback-image {
+.cid-ue277QQTHs .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -8482,33 +8332,8 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-udYLkqX3bI .card-wrapper {
-  background: #0c2c68;
-}
-@media (max-width: 767px) {
-  .cid-udYLkqX3bI .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-udYLkqX3bI .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-udYLkqX3bI .card-wrapper {
-    padding: 9rem 4rem;
-  }
-}
-.cid-udYLkqX3bI .mbr-text,
-.cid-udYLkqX3bI .mbr-section-btn {
+.cid-ue277QQTHs .mbr-section-title {
   color: #000000;
-  text-align: center;
-}
-.cid-udYLkqX3bI .card-title,
-.cid-udYLkqX3bI .card-box {
-  text-align: center;
-  color: #ffffff;
 }
 .cid-ucVDj2Lrhv {
   background-color: #ffffff;
